--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 					<div id="intro">
 						<h1>Jacem Benhlima Portfolio<br />
 						</h1>
-						<p>Accounting and finance student | Data Analytics Enthusiast | Excel, Power BI, SQL <a href="www.linkedin.com/in/jacem-benhlima">@Jacem BENHLIMA</a>
+						<p>Accounting and finance student | Data Analytics Enthusiast | Excel, Power BI, SQL. As a dedicated accounting and finance student with a passion for data analytics, 
+I combine modest financial knowledge with analytical skills to deliver impactful solutions. I possess a solid understanding of financial principles, which I apply through my proficiency in Excel, Power BI, and SQL.
+I am committed to helping organizations make data-driven financial decisions by leveraging advanced analytics tools. My experience includes creating insightful dashboards, performing in-depth data analysis, 
+and generating actionable insights to help businesses optimize their financial strategies. I thrive on solving complex problems by transforming raw data into clear, meaningful reports that drive informed decision-making.
+ <a href="www.linkedin.com/in/jacem-benhlima">@Jacem BENHLIMA</a>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
